[package]
name = "node-executor"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node implementation in Rust."
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
node-primitives = {  path = "../common/primitives", package = "listen-primitives"}
node-runtime = {  path = "../runtime" }
sc-executor = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-core = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-keystore = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-io = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-state-machine = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

trie-root = "0.16.0"
frame-benchmarking = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

[dev-dependencies]
criterion = "0.3.0"
frame-support = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-system = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
#node-testing = { path = "../testing" }
pallet-balances = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-contracts = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-grandpa = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-im-online = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-indices = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-session = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-timestamp = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-transaction-payment = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-treasury = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-application-crypto = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-consensus-babe = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-runtime = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-externalities = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
substrate-test-client = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
wat = "1.0"
futures = "0.3.9"

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []

#[[bench]]
#name = "bench"
#harness = false
