[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "15.1.0"
node-primitives = {  path = "../common/primitives", package = "listen-primitives"}
pallet-contracts-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-mmr-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-transaction-payment-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-client-api = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-consensus-babe = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-consensus-babe-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-consensus-epochs = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-chain-spec = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-finality-grandpa = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-finality-grandpa-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-keystore = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-rpc-api = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sc-sync-state-rpc = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-api = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-block-builder = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-blockchain = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-keystore = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-consensus = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-consensus-babe = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-runtime = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-transaction-pool = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
substrate-frame-rpc-system = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
