[package]
name = "node-runtime"
version = "2.0.1"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"
build = "build.rs"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"
hex-literal = { version = "0.3.1", optional = true }
log = { version = "0.4.14", default-features = false }

# primitives
sp-authority-discovery = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-consensus-babe = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false}
sp-inherents = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }


sp-offchain = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-core = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-std = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-api = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-runtime = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-staking = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-keyring = {  optional = true, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-session = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-transaction-pool = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-version = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-npos-elections = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

# frame dependencies
frame-executive = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-benchmarking = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', optional = true }
frame-support = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-system = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-system-benchmarking = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', optional = true }
frame-election-provider-support = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-system-rpc-runtime-api = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-try-runtime = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', optional = true }
pallet-assets = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-authority-discovery = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-authorship = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-babe = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-balances = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-bounties = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-collective = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-contracts = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-contracts-primitives = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-contracts-rpc-runtime-api = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-democracy = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-election-provider-multi-phase = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-elections-phragmen = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-gilt = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-grandpa = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-im-online = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-indices = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-identity = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-lottery = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-membership = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-mmr = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-multisig = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-offences = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-offences-benchmarking = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
pallet-proxy = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-randomness-collective-flip = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-recovery = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-session = {  features = ["historical"], git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false }
pallet-session-benchmarking = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', default-features = false, optional = true }
pallet-staking = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-staking-reward-curve = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-scheduler = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-society = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-sudo = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-timestamp = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-tips = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-treasury = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-utility = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-transaction-payment = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-transaction-payment-rpc-runtime-api = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-transaction-storage = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-uniques = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
max-encoded-len = {  default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8', features = [ "derive" ] }

# listen-parachain
listen-primitives = { path = '../common/primitives', version = '1.0.0', default-features = false }
pallet-listen = { path = '../common/pallets/listen', default-features = false, version = '1.0.0' }
pallet-vesting = { path = '../common/pallets/vesting', default-features = false, version = '3.0.0' }
pallet-nicks = { path = '../common/pallets/nicks', default-features = false, version = '1.0.0' }
pallet-dao = { path = '../common/pallets/dao', default-features = false, version = '3.0.0' }
pallet-room-treasury = { path = '../common/pallets/room-treasury', default-features = false, version = '1.0.0' }
listen-constants = { path = '../common/constants', version = '1.0.0', default-features = false }

pallet_currencies = { path = '../common/pallets/currencies', default-features = false, version = '3.0.0' }

# orml
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, version = '0.4.1-dev' }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, version = '0.4.1-dev' }

[build-dependencies]
substrate-wasm-builder = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

[dev-dependencies]
sp-io = {  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

[features]

default = ["std"]
with-tracing = [ "frame-executive/with-tracing" ]
std = [
	"sp-authority-discovery/std",
	"pallet-assets/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"sp-consensus-babe/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"sp-block-builder/std",
	"codec/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"frame-executive/std",
	"pallet-gilt/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"sp-inherents/std",
	"pallet-lottery/std",
	"pallet-membership/std",
	"pallet-mmr/std",
	"pallet-multisig/std",
	"pallet-identity/std",
	"pallet-scheduler/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"pallet-proxy/std",
	"sp-core/std",
	"pallet-randomness-collective-flip/std",
	"sp-std/std",
	"pallet-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-staking/std",
	"sp-keyring",
	"sp-session/std",
	"pallet-sudo/std",
	"frame-support/std",
	"frame-benchmarking/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-timestamp/std",
	"pallet-tips/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-storage/std",
	"pallet-treasury/std",
	"sp-transaction-pool/std",
	"pallet-utility/std",
	"sp-version/std",
	"pallet-society/std",
	"pallet-recovery/std",
	"pallet-uniques/std",
	"pallet-vesting/std",
	"log/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"max-encoded-len/std",

	"pallet-listen/std",
	"orml-traits/std",
	"orml-tokens/std",
	"pallet-nicks/std",
	"pallet-dao/std",
	"pallet-room-treasury/std",
	"listen-primitives/std",
	"pallet_currencies/std",
	"listen-constants/std",

]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-gilt/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-lottery/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-mmr/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-society/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
#	"pallet-vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-lottery/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-society/try-runtime",
	"pallet-recovery/try-runtime",
	"pallet-uniques/try-runtime",
#	"pallet-vesting/try-runtime",
	"pallet-gilt/try-runtime",
]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]
