[package]
name = "pallet-listen"
version = "1.0.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# substrate fram
frame-support = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
frame-system = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-multisig = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-timestamp = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
pallet-treasury = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }

#local
listen-constants = { path = '../../constants', default-features = false, version = '1.0.0' }
listen-primitives = { path = '../../primitives', default-features = false, version = '1.0.0' }
listen-traits = { path = '../../traits', default-features = false, version = '1.0.0' }

#orml
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, version = '0.4.1-dev' }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, version = '0.4.1-dev' }

#[dev-dependencies]
sp-runtime = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
sp-std = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.8' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = ['std']
std = [

    "frame-support/std",
    "frame-system/std",
    "pallet-multisig/std",
    "pallet-timestamp/std",
    "pallet-treasury/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
    "listen-constants/std",
    "listen-primitives/std",
    "orml-tokens/std",
    "orml-traits/std",
    "listen-traits/std",

]

